--- a/BulkyWebApp/Views/Catergory/Create.cshtml
+++ b/BulkyWebApp/Views/Catergory/Create.cshtml
@@ -6,7 +6,7 @@
             <h2> Create Catergory </h2>
             <hr />
         </div>
-
+         @* <div asp-validation-summary="ModelOnly"></div> *@
         <div class=" row p-1 mb-3">
             <label asp-for="Name" class="mb-2 p-0"> </label>
             <input asp-for="Name" class="form-control rounded"/>
@@ -22,6 +22,13 @@
         </div>
         <button type="submit" class="btn btn-primary rounded"> Submit </button>
         <a class="btn btn-secondary" asp-controller="Catergory" asp-action="Index"> <i class="bi bi-arrow-left-circle"></i> Back to List</a>
-
+        
     </div>
 </form>
+
+@section Scripts{
+    @{
+
+        <partial name="_ValidationScriptsPartial" />
+    }
+}
