--- a/BulkyWebApp/Views/Catergory/Index.cshtml
+++ b/BulkyWebApp/Views/Catergory/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model List<Catergory>
 
+<partial  name="_Notification"/>
     <div class="container">
         <div class="row pt-5 pb-3">
             <div class="col-6">
@@ -34,10 +35,10 @@
             <td>@obj.Display_Order</td>
             <td>
                 <div class="w-50 btn-group rounded gap-5" role="group">
-                      <a asp-controller="Catergory" asp-action="Edit" class="btn btn-primary rounded ">
+                            <a asp-controller="Catergory" asp-action="Edit" asp-route-id="@obj.ID" class="btn btn-primary rounded ">
                                 <i class="bi bi-pencil-square"></i>
                             Edit </a>
-                      <a asp-controller="Catergory" asp-action="Delete" class="btn btn-danger rounded ">
+                            <a asp-controller="Catergory" asp-action="Delete" asp-route-id="@obj.ID" class="btn btn-danger rounded ">
                                 <i class="bi bi-trash3"></i>
                           Delete
                       </a>
