--- a/ProductManagement/Pages/Catergories/Index.cshtml
+++ b/ProductManagement/Pages/Catergories/Index.cshtml
@@ -7,7 +7,7 @@
                 <h2> Caterogy List </h2>
             </div>
             <div class="col-6 text-end">
-                <a asp-page="Catergories/create" class="btn btn-primary rounded"> <i class="bi bi-plus"></i> Create a List</a>
+                <a asp-page="/Catergories/create" class="btn btn-primary rounded"> <i class="bi bi-plus"></i> Create a List</a>
 
             </div>
 
@@ -35,10 +35,10 @@
             <td>@obj.Display_Order</td>
             <td>
                 <div class="w-50 btn-group rounded gap-5" role="group">
-                            <a asp-page="Catergories/edit" asp-route-id="@obj.ID" class="btn btn-primary rounded ">
+                            <a asp-page="/Catergories/edit" asp-route-id="@obj.ID" class="btn btn-primary rounded ">
                                 <i class="bi bi-pencil-square"></i>
                             Edit </a>
-                            <a asp-page="Catergories/delete" asp-route-id="@obj.ID" class="btn btn-danger rounded ">
+                            <a asp-page="/Catergories/delete" asp-route-id="@obj.ID" class="btn btn-danger rounded ">
                                 <i class="bi bi-trash3"></i>
                           Delete
                       </a>
